feat: generalize data creation
1. add workspace create
2. add grant creation
