# src/routes/index.ts
@@ -1,5 +1,7 @@
 //generated file, run 'yarn generate:routes-index' to update
 
 export default {
-	validate: async() => (await import('./validate')).default,
+	validateGrantApplication: async() => (await import('./validateGrantApplication')).default,
+	validateGrantCreate: async() => (await import('./validateGrantCreate')).default,
+	validateWorkspaceCreate: async() => (await import('./validateWorkspaceCreate')).default,
 }
