# src/routes/validateGrantApplication.ts
@@ -1,0 +1,3 @@
+import makeUploaderFunction from '../utils/make-uploader-function'
+
+export default makeUploaderFunction('validateGrantApplication')
